# self-learning-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.json
.claude/commands/: git-workflow.md  update-docs.md
bindings/sle-py/: Cargo.toml  pyproject.toml
bindings/sle-py/python_tests/: smoke_test.py
bindings/sle-py/src/: lib.rs
crates/sle-adapters-code/: Cargo.toml
crates/sle-adapters-code/src/: lib.rs
crates/sle-adapters-text/: Cargo.toml
crates/sle-adapters-text/src/: lib.rs
crates/sle-cli/: Cargo.toml
crates/sle-cli/src/: main.rs
crates/sle-core/: Cargo.toml
crates/sle-core/src/: forest.rs  hlc.rs  id.rs  learning.rs  lib.rs  model.rs  ops.rs  orset.rs  snapshot.rs  traits.rs
crates/sle-embeddings/: Cargo.toml
crates/sle-embeddings/src/: lib.rs
crates/sle-sync/: Cargo.toml
crates/sle-sync/src/: lib.rs
docs/: architecture.md  brainstorm-design-and-implement-enchanted-brooks.md  demo-run.html  feature-map.md  request-workflow.md
sample-workspace/: auth.rs  baking.md  design.md  login.py  math_utils.rs
