[workspace]
resolver = "2"
members = [
    "crates/sle-core",
    "crates/sle-adapters-code",
    "crates/sle-adapters-text",
    "crates/sle-embeddings",
    "crates/sle-sync",
    "crates/sle-cli",
]
# bindings/sle-py is a standalone maturin project (its own [workspace] table,
# own Cargo.lock) — it needs pyo3's "extension-module" feature, which we
# don't want unified into the rest of the workspace's builds.
exclude = ["bindings/sle-py"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
